--- a/SourceCode/app/src/main/res/layout/activity_friends.xml
+++ b/SourceCode/app/src/main/res/layout/activity_friends.xml
@@ -102,13 +102,16 @@
         app:layout_constraintVertical_bias="0.982"
         app:srcCompat="@drawable/book_icon" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="270dp"
-        android:layout_height="245dp"
+    <Button
+        android:id="@+id/Friends_findFriendsBtn"
+        android:layout_width="330dp"
+        android:layout_height="59dp"
+        android:text="Find Friends"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.37"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/dev_image" />
+        app:layout_constraintVertical_bias="0.373" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
