Implemented being able to view profile on click

--- a/SourceCode/app/src/main/res/layout/activity_find_friend.xml
+++ b/SourceCode/app/src/main/res/layout/activity_find_friend.xml
@@ -39,12 +39,36 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/FindFriends_recyclerView"
-        android:layout_width="411dp"
-        android:layout_height="676dp"
+        android:layout_width="414dp"
+        android:layout_height="614dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/findFriend_searchView" />
+
+    <ImageView
+        android:id="@+id/findFriend_backButton"
+        android:layout_width="52dp"
+        android:layout_height="38dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.044"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.018"
+        app:srcCompat="@drawable/back_icon" />
+
+    <SearchView
+        android:id="@+id/findFriend_searchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:iconifiedByDefault="false"
+        android:queryHint="Search Here"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar14"
+        app:layout_constraintVertical_bias="0.004" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
