--- a/SourceCode/app/src/main/res/layout/activity_social.xml
+++ b/SourceCode/app/src/main/res/layout/activity_social.xml
@@ -5,18 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    android:backgroundTint="#B9F3BC"
+    android:backgroundTint="#FFFFFF"
     tools:context=".Social.SocialActivity">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="270dp"
-        android:layout_height="245dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/social_friendsList"
+        android:layout_width="410dp"
+        android:layout_height="531dp"
+        android:layout_marginTop="68dp"
+        android:background="#FFFFFF"
+        android:backgroundTint="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar11" />
+
+    <View
+        android:id="@+id/divider9"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#B1B1B1"
+        android:backgroundTint="#979797"
+        android:foreground="#919191"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/dev_image" />
+        app:layout_constraintVertical_bias="0.169" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar11"
@@ -50,7 +66,7 @@
         android:id="@+id/profile_headerText4"
         android:layout_width="198dp"
         android:layout_height="43dp"
-        android:text="Social"
+        android:text="Friends"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#FFFFFF"
@@ -112,14 +128,15 @@
         app:srcCompat="@drawable/home_icon" />
 
     <Button
-        android:id="@+id/social_friendsButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Friends"
+        android:id="@+id/social_findFriendsButton"
+        android:layout_width="186dp"
+        android:layout_height="43dp"
+        android:text="Find Friends"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar10"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.968"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.77" />
+        app:layout_constraintVertical_bias="0.097" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
