--- a/SourceCode/app/src/main/res/layout/activity_profile.xml
+++ b/SourceCode/app/src/main/res/layout/activity_profile.xml
@@ -169,7 +169,7 @@
         app:layout_constraintVertical_bias="0.982"
         app:srcCompat="@drawable/profile_icon" />
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_profilePicture"
         android:layout_width="152dp"
         android:layout_height="133dp"
